# RL_augmented_MPC

./: README.md
experiment_code/quadruped_control/: CMakeLists.txt
experiment_code/quadruped_control/BalanceController/: BalanceController.cpp  BalanceController.hpp  BalanceControllerWrapper.cpp  BalanceControllerWrapper.h
experiment_code/quadruped_control/ConvexMPC/: Gait.cpp  Gait.h  MPCLocoMotion.cpp  MPCLocoMotion.h  MPCSolver.cpp  MPCSolver.h  NominalMPC.cpp  NominalMPC.h  RobotState.cpp  RobotState.h  adaptiveMPC.cpp  adaptiveMPC.h  adaptivePolicy.cpp  adaptivePolicy.h  footReactionPolicy.cpp  footReactionPolicy.h  policyIO.cpp  policyIO.h  rlMPC.cpp  rlMPC.h  utils.h
experiment_code/quadruped_control/include/FSM/: FSM.h  FSMState_PDStand.h  FSMState_QPStand.h  FSMState_ThreeFoot.h  FSMState_Walking.h  FSMState_rlMPC.h
experiment_code/quadruped_control/include/common/: ContactEstimator.h  ControlFSMData.h  DesiredCommand.h  FootSwingTrajectory.h  LegController.h  OrientationEstimator.h  PositionVelocityEstimator.h  Quadruped.h  StateEstimatorContainer.h  cppTypes.h  enumClass.h
experiment_code/quadruped_control/include/interface/: CmdPanel.h  HighCmdPanel.h  IOInterface.h  IOSDK.h  WirelessHandle.h
experiment_code/quadruped_control/include/messages/: LowLevelCmd.h  LowlevelState.h
experiment_code/quadruped_control/policies/: adaptive_control_test.json  foot_reaction_test.json
experiment_code/quadruped_control/src/: main.cpp
experiment_code/quadruped_control/src/FSM/: FSM.cpp  FSMState_PDStand.cpp  FSMState_Passive.cpp  FSMState_QPStand.cpp  (+3 more)
(+61 files in other folders)
